modal black bg changed to blurred and scrollbar fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,7 @@ body {
     font-size: 1.2rem;
   }
 }
+
+body.modal-open {
+  overflow: hidden;
+}
